# mspEN

./: README.md  dev-environment.yml  environment.yml  pyproject.toml  setup.py
mspEN/Electrodogram/: datasetElectro.py  electroAE.py
mspEN/MSP/: msp.py
mspEN/Neurogram/: __init__.py  neuroAE.py
src/mspEN/Electrodogram/: __init__.py  autoencoder.py  train.py
src/mspEN/Neurogram/: __init__.py  autoencoder.py  dataset.py  datasetNeuro.py  discriminators.py  neuroAE.py  train.py
src/mspEN/modules/: __init__.py  blocks.py  hyperparameters.py  loss.py  normalisation.py  types.py
src/mspEN/msp/: __init__.py
src/mspEN/test/: __init__.py
src/mspEN/train/: __init__.py
src/mspEN/utils/: __init__.py  logging.py
tests/: test_train.py
